# hello_program

./: README.md  notes2
CLI_tool/: Cargo.toml  sample.md  xyz.html
CLI_tool/src/: main.rs
Guess_word/: Cargo.toml
Guess_word/src/: main.rs
Tictac/: Cargo.toml
Tictac/src/: main.rs
Todo_rust/: Cargo.toml  Rocket.toml  tasts.csv
Todo_rust/src/: main.rs  tasks.rs
guessing_game/src/: main.rs
src/: main.rs  notes
